--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,13 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.MainFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="main fragment" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvImage"
+        android:layout_width="@dimen/_250sdp"
+        android:layout_height="@dimen/_250sdp"
+        android:layout_margin="@dimen/_20sdp"
 
-</FrameLayout>
+        app:cardElevation="0dp"
+        app:cardCornerRadius="15dp"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/ivRandomMeme"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </androidx.cardview.widget.CardView>
+
+    <ProgressBar
+        android:id="@+id/pbImage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+
+        android:indeterminateTint="@color/black"
+        android:indeterminate="true"
+        android:indeterminateTintMode="src_atop"
+
+        app:layout_constraintStart_toStartOf="@id/cvImage"
+        app:layout_constraintEnd_toEndOf="@id/cvImage"
+        app:layout_constraintTop_toTopOf="@id/cvImage"
+        app:layout_constraintBottom_toBottomOf="@id/cvImage"/>
+
+    <LinearLayout
+        android:id="@+id/llSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+
+        android:orientation="horizontal"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cvImage">
+
+        <Button
+            android:id="@+id/btnNextMeme"
+            android:layout_width="180dp"
+            android:layout_height="60dp"
+
+            android:text="Next Meme"
+            android:textSize="20sp"
+            android:background="@drawable/btn_shape" />
+
+        <ImageView
+            android:id="@+id/ivLike"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="30dp"
+
+            android:src="@drawable/ic_favorites"
+            app:tint="@color/black"/>
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
